--- a/Week 4/Practicum_4.3_Opdracht_A-Delgado.ipynb
+++ b/Week 4/Practicum_4.3_Opdracht_A-Delgado.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,16 +36,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pyodbc.Cursor at 0x19dfc46ccb0>"
+       "<pyodbc.Cursor at 0x250a6aab830>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,8 +69,8 @@
     "                            #  +'integrated security = true' \n",
     "                             )\n",
     "export_cursor = export_conn.cursor()\n",
-    "export_cursor.execute(\"CREATE DATABASE GreatOutdoorsDW\")\n",
-    "export_cursor.execute(\"USE GreatOutdoorsDW\")\n",
+    "# export_cursor.execute(\"CREATE DATABASE GreatOutdoorsDW\")\n",
+    "# export_cursor.execute(\"USE GreatOutdoorsDW\")\n",
     "\n",
     "export_cursor"
    ]
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,29 +267,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PRODUCT_NUMBER        object\n",
-      "INTRODUCTION_DATE     object\n",
-      "PRODUCT_TYPE_CODE     object\n",
-      "PRODUCTION_COST      float64\n",
-      "MARGIN               float64\n",
-      "PRODUCT_IMAGE         object\n",
-      "LANGUAGE              object\n",
-      "PRODUCT_NAME          object\n",
-      "DESCRIPTION           object\n",
-      "TRIAL888              object\n",
-      "dtype: object\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data opschonen"
    ]
   },
   {
@@ -297,7 +286,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# De bedoeling hier is om ervoor te zorgen dat data zich in de goede kolommen bevindt.\n",
+    "# Dus geen plaatsnaam waar een prijs verwacht wordt."
+   ]
   },
   {
    "cell_type": "markdown",
