Meeste datatype conversies zijn gedaan. Nu kijken naar hoe de Date dimensietabel geimplmenteerd moet worden.

--- a/Week 4/Practicum_4.3_Opdracht_A-Delgado.ipynb
+++ b/Week 4/Practicum_4.3_Opdracht_A-Delgado.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,16 +36,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pyodbc.Cursor at 0x250a61f7330>"
+       "<pyodbc.Cursor at 0x151f1a64830>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
     "database = 'GreatOutdoorsDW'\n",
     "\n",
     "DB = {\n",
-    "    'servername': desktop,\n",
+    "    'servername': laptop,\n",
     "    'database' : database\n",
     "}\n",
     "\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,6 +245,9 @@
     "global order_header\n",
     "order_header = pd.read_sql_query(\"SELECT * FROM {}\".format(\"order_header\"),sales_con)\n",
     "\n",
+    "global order_method\n",
+    "order_method = pd.read_sql_query(\"SELECT * FROM {}\".format(\"order_method\"),sales_con)\n",
+    "\n",
     "global order_details\n",
     "order_details = pd.read_sql_query(\"SELECT * FROM {}\".format(\"order_details\"),sales_con)\n",
     "\n",
@@ -255,7 +258,10 @@
     "returned_item = pd.read_sql_query(\"SELECT * FROM {}\".format(\"returned_item\"),sales_con)\n",
     "\n",
     "global return_reason\n",
-    "return_reason = pd.read_sql_query(\"SELECT * FROM {}\".format(\"return_reason\"),sales_con)"
+    "return_reason = pd.read_sql_query(\"SELECT * FROM {}\".format(\"return_reason\"),sales_con)\n",
+    "\n",
+    "global SALES_TARGETData\n",
+    "SALES_TARGETData = pd.read_sql_query(\"SELECT * FROM {}\".format(\"SALES_TARGETData\"),sales_con)"
    ]
   },
   {
@@ -266,8 +272,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### GO_CRM"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -462,18 +475,403 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### GO_STAFF"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "COURSE_CODE            int32\n",
+       "COURSE_DESCRIPTION    object\n",
+       "TRIAL633              object\n",
+       "dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "SALES_BRANCH_CODE     int32\n",
+       "ADDRESS1             object\n",
+       "ADDRESS2             object\n",
+       "CITY                 object\n",
+       "REGION               object\n",
+       "POSTAL_ZONE          object\n",
+       "COUNTRY_CODE          int32\n",
+       "TRIAL633             object\n",
+       "dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "SALES_STAFF_CODE              int32\n",
+       "FIRST_NAME                   object\n",
+       "LAST_NAME                    object\n",
+       "POSITION_EN                  object\n",
+       "WORK_PHONE                   object\n",
+       "EXTENSION                   float64\n",
+       "FAX                          object\n",
+       "EMAIL                        object\n",
+       "DATE_HIRED           datetime64[ns]\n",
+       "SALES_BRANCH_CODE             int32\n",
+       "MANAGER_CODE                  int32\n",
+       "TRIAL633                     object\n",
+       "dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "YEAR                      object\n",
+       "SALES_STAFF_CODE           int32\n",
+       "SATISFACTION_TYPE_CODE     int32\n",
+       "TRIAL633                  object\n",
+       "dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "SATISFACTION_TYPE_CODE            int32\n",
+       "SATISFACTION_TYPE_DESCRIPTION    object\n",
+       "TRIAL633                         object\n",
+       "dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "go_staff = [go_staff_course, go_staff_sales_branch,go_staff_staff,go_staff_satisfaction, go_staff_satisfaction_type]\n",
+    "\n",
+    "go_staff_course[\"COURSE_CODE\"] = go_staff_course[\"COURSE_CODE\"].astype(int)\n",
+    "\n",
+    "go_staff_sales_branch[\"COUNTRY_CODE\"] = go_staff_sales_branch[\"COUNTRY_CODE\"].astype(int)\n",
+    "go_staff_sales_branch[\"SALES_BRANCH_CODE\"] = go_staff_sales_branch[\"SALES_BRANCH_CODE\"].astype(int)\n",
+    "\n",
+    "go_staff_staff[\"SALES_STAFF_CODE\"] = go_staff_staff[\"SALES_STAFF_CODE\"].astype(int)\n",
+    "go_staff_staff[\"SALES_BRANCH_CODE\"] = go_staff_staff[\"SALES_BRANCH_CODE\"].astype(int)\n",
+    "go_staff_staff[\"MANAGER_CODE\"] = go_staff_staff[\"MANAGER_CODE\"].astype(int)\n",
+    "go_staff_staff[\"EXTENSION\"] = go_staff_staff[\"EXTENSION\"].astype(float)\n",
+    "go_staff_staff[\"DATE_HIRED\"] = pd.to_datetime(go_staff_staff[\"DATE_HIRED\"])\n",
+    "\n",
+    "go_staff_satisfaction[\"SALES_STAFF_CODE\"] = go_staff_satisfaction[\"SALES_STAFF_CODE\"].astype(int)\n",
+    "go_staff_satisfaction[\"SATISFACTION_TYPE_CODE\"] = go_staff_satisfaction[\"SATISFACTION_TYPE_CODE\"].astype(int)\n",
+    "# wat voor datatype for Year? Kijken naar dimensiewaardes\n",
+    "\n",
+    "go_staff_satisfaction_type[\"SATISFACTION_TYPE_CODE\"] = go_staff_satisfaction_type[\"SATISFACTION_TYPE_CODE\"].astype(int)\n",
+    "\n",
+    "for table in go_staff:\n",
+    "    display(table.dtypes)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### GO_SALES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Id                   int32\n",
+       "SALES_STAFF_CODE     int32\n",
+       "SALES_YEAR          object\n",
+       "SALES_PERIOD         int32\n",
+       "RETAILER_NAME       object\n",
+       "PRODUCT_NUMBER       int32\n",
+       "SALES_TARGET         int32\n",
+       "RETAILER_CODE        int32\n",
+       "TRIAL888            object\n",
+       "dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "COUNTRY_CODE      int32\n",
+       "COUNTRY          object\n",
+       "LANGUAGE         object\n",
+       "CURRENCY_NAME    object\n",
+       "TRIAL879         object\n",
+       "dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ORDER_DETAIL_CODE      int32\n",
+       "ORDER_NUMBER           int32\n",
+       "PRODUCT_NUMBER         int32\n",
+       "QUANTITY               int32\n",
+       "UNIT_COST            float64\n",
+       "UNIT_PRICE           float64\n",
+       "UNIT_SALE_PRICE      float64\n",
+       "TRIAL879              object\n",
+       "dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ORDER_NUMBER             object\n",
+       "RETAILER_NAME            object\n",
+       "RETAILER_SITE_CODE       object\n",
+       "RETAILER_CONTACT_CODE    object\n",
+       "SALES_STAFF_CODE         object\n",
+       "SALES_BRANCH_CODE        object\n",
+       "ORDER_DATE               object\n",
+       "ORDER_METHOD_CODE        object\n",
+       "TRIAL885                 object\n",
+       "dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ORDER_METHOD_CODE    object\n",
+       "ORDER_METHOD_EN      object\n",
+       "TRIAL888             object\n",
+       "dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "PRODUCT_NUMBER       object\n",
+       "INTRODUCTION_DATE    object\n",
+       "PRODUCT_TYPE_CODE    object\n",
+       "PRODUCTION_COST      object\n",
+       "MARGIN               object\n",
+       "PRODUCT_IMAGE        object\n",
+       "LANGUAGE             object\n",
+       "PRODUCT_NAME         object\n",
+       "DESCRIPTION          object\n",
+       "TRIAL888             object\n",
+       "dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "PRODUCT_LINE_CODE    object\n",
+       "PRODUCT_LINE_EN      object\n",
+       "TRIAL888             object\n",
+       "dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "PRODUCT_TYPE_CODE    object\n",
+       "PRODUCT_LINE_CODE    object\n",
+       "PRODUCT_TYPE_EN      object\n",
+       "TRIAL888             object\n",
+       "dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "RETURN_CODE           object\n",
+       "RETURN_DATE           object\n",
+       "ORDER_DETAIL_CODE     object\n",
+       "RETURN_REASON_CODE    object\n",
+       "RETURN_QUANTITY       object\n",
+       "TRIAL888              object\n",
+       "dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "RETURN_REASON_CODE       object\n",
+       "RETURN_DESCRIPTION_EN    object\n",
+       "TRIAL888                 object\n",
+       "dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "SALES_STAFF_CODE     object\n",
+       "FIRST_NAME           object\n",
+       "LAST_NAME            object\n",
+       "POSITION_EN          object\n",
+       "WORK_PHONE           object\n",
+       "EXTENSION            object\n",
+       "FAX                  object\n",
+       "EMAIL                object\n",
+       "DATE_HIRED           object\n",
+       "SALES_BRANCH_CODE    object\n",
+       "TRIAL888             object\n",
+       "dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "SALES_BRANCH_CODE    object\n",
+       "ADDRESS1             object\n",
+       "ADDRESS2             object\n",
+       "CITY                 object\n",
+       "REGION               object\n",
+       "POSTAL_ZONE          object\n",
+       "COUNTRY_CODE         object\n",
+       "TRIAL888             object\n",
+       "dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "RETAILER_SITE_CODE    object\n",
+       "RETAILER_CODE         object\n",
+       "ADDRESS1              object\n",
+       "ADDRESS2              object\n",
+       "CITY                  object\n",
+       "REGION                object\n",
+       "POSTAL_ZONE           object\n",
+       "COUNTRY_CODE          object\n",
+       "ACTIVE_INDICATOR      object\n",
+       "TRIAL888              object\n",
+       "dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "go_sales = [SALES_TARGETData,country,order_details,order_header,\n",
+    "            order_method,product,product_line,product_type,returned_item,\n",
+    "            return_reason, sales_staff,sales_branch,retailer_site]\n",
+    "\n",
+    "SALES_TARGETData[\"Id\"] = SALES_TARGETData[\"Id\"].astype(int)\n",
+    "SALES_TARGETData[\"SALES_STAFF_CODE\"] = SALES_TARGETData[\"SALES_STAFF_CODE\"].astype(int)\n",
+    "SALES_TARGETData[\"SALES_PERIOD\"] = SALES_TARGETData[\"SALES_PERIOD\"].astype(int)\n",
+    "SALES_TARGETData[\"PRODUCT_NUMBER\"] = SALES_TARGETData[\"PRODUCT_NUMBER\"].astype(int)\n",
+    "SALES_TARGETData[\"SALES_TARGET\"] = SALES_TARGETData[\"SALES_TARGET\"].astype(int)\n",
+    "SALES_TARGETData[\"RETAILER_CODE\"] = SALES_TARGETData[\"RETAILER_CODE\"].astype(int)\n",
+    "# datatype voor sales_year ?\n",
+    "\n",
+    "country[\"COUNTRY_CODE\"] = country[\"COUNTRY_CODE\"].astype(int)\n",
+    "\n",
+    "order_details[\"ORDER_DETAIL_CODE\"] = order_details[\"ORDER_DETAIL_CODE\"].astype(int)\n",
+    "order_details[\"ORDER_NUMBER\"] = order_details[\"ORDER_NUMBER\"].astype(int)\n",
+    "order_details[\"PRODUCT_NUMBER\"] = order_details[\"PRODUCT_NUMBER\"].astype(int)\n",
+    "order_details[\"QUANTITY\"] = order_details[\"QUANTITY\"].astype(int)\n",
+    "order_details[\"UNIT_COST\"] = order_details[\"UNIT_COST\"].apply(float)\n",
+    "order_details[\"UNIT_PRICE\"] = order_details[\"UNIT_PRICE\"].apply(float)\n",
+    "order_details[\"UNIT_SALE_PRICE\"] = order_details[\"UNIT_SALE_PRICE\"].apply(float)\n",
+    "\n",
+    "order_header[\"ORDER_NUMBER\"] = order_header[\"ORDER_NUMBER\"].astype(int)\n",
+    "order_header[\"RETAILER_SITE_CODE\"] = order_header[\"RETAILER_SITE_CODE\"].astype(int)\n",
+    "order_header[\"RETAILER_CONTACT_CODE\"] = order_header[\"RETAILER_CONTACT_CODE\"].astype(int)\n",
+    "order_header[\"SALES_STAFF_CODE\"] = order_header[\"SALES_STAFF_CODE\"].astype(int)\n",
+    "order_header[\"SALES_BRANCH_CODE\"] = order_header[\"SALES_BRANCH_CODE\"].astype(int)\n",
+    "order_header[\"ORDER_DATE\"] = pd.to_datetime(order_header[\"ORDER_DATE\"])\n",
+    "order_header[\"ORDER_METHOD_CODE\"] = order_header[\"ORDER_METHOD_CODE\"].astype(int)\n",
+    "\n",
+    "order_method[\"ORDER_METHOD_CODE\"] = order_method[\"ORDER_METHOD_CODE\"].astype(int)\n",
+    "\n",
+    "product[\"PRODUCT_NUMBER\"] = product[\"PRODUCT_NUMBER\"].astype(int)\n",
+    "product[\"INTRODUCTION_DATE\"] = pd.to_datetime(product[\"INTRODUCTION_DATE\"])\n",
+    "product[\"PRODUCT_TYPE_CODE\"] = product[\"PRODUCT_TYPE_CODE\"].astype(int)\n",
+    "product[\"PRODUCTION_COST\"] = product[\"PRODUCTION_COST\"].astype(float)\n",
+    "product[\"MARGIN\"] = product[\"MARGIN\"].astype(float)\n",
+    "\n",
+    "product_line[\"PRODUCT_LINE_CODE\"] = product_line[\"PRODUCT_LINE_CODE\"].astype(int)\n",
+    "\n",
+    "product_type[\"PRODUCT_LINE_CODE\"] = product_type[\"PRODUCT_LINE_CODE\"].astype(int)\n",
+    "product_type[\"PRODUCT_TYPE_CODE\"] = product_type[\"PRODUCT_TYPE_CODE\"].astpye(int)\n",
+    "\n",
+    "returned_item[\"RETURN_CODE\"] = returned_item[\"RETURN_CODE\"].astype(int)\n",
+    "returned_item[\"RETURN_DATE\"] = pd.to_datetime(returned_item[\"RETURN_DATE\"])\n",
+    "returned_item[\"ORDER_DETAIL_CODE\"] = returned_item[\"ORDER_DETAIL_CODE\"].astype(int)\n",
+    "returned_item[\"RETURN_REASON_CODE\"] = returned_item[\"RETURN_REASON_CODE\"].astype(int)\n",
+    "returned_item[\"RETURN_QUANTITY\"] = returned_item[\"RETURN_QUANTITY\"].astype(int)\n",
+    "\n",
+    "sales_staff[\"SALES_STAFF_CODE\"] = sales_staff[\"SALES_STAFF_CODE\"].astype(int)\n",
+    "sales_staff[\"EXTENSION\"] = sales_staff[\"EXTENSION\"].astype(float)\n",
+    "sales_staff[\"DATE_HIRED\"] = pd.to_datetime(sales_staff[\"DATE_HIRED\"])\n",
+    "sales_staff[\"SALES_BRANCH_CODE\"] = sales_staff[\"SALES_BRANCH_CODE\"].astype(int) \n",
+    "\n",
+    "sales_branch[\"SALES_BRANCH_CODE\"] = sales_branch[\"SALES_BRANCH_CODE\"].astype(int)\n",
+    "sales_branch[\"COUNTRY_CODE\"] = sales_branch[\"COUNTRY_CODE\"].astype(int)\n",
+    "\n",
+    "retailer_site[\"RETAILER_SITE_CODE\"] = retailer_site[\"RETAILER_SITE_CODE\"].astype(int)\n",
+    "retailer_site[\"RETAILER_CODE\"] = retailer_site[\"RETAILER_CODE\"].astype(int)\n",
+    "retailer_site[\"COUNTRY_CODE\"] = retailer_site[\"COUNTRY_CODE\"].astype(int)\n",
+    "retailer_site[\"ACTIVE_INDICATOR\"] = retailer_site[\"ACTIVE_INDICATOR\"].astype(int)\n",
+    "\n",
+    "for table in go_sales:\n",
+    "    display(table.dtypes)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -484,12 +882,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# De bedoeling hier is om ervoor te zorgen dat data zich in de goede kolommen bevindt.\n",
-    "# Dus geen plaatsnaam waar een prijs verwacht wordt."
+    "# Dus geen plaatsnaam waar een prijs verwacht wordt.\n",
+    "\n",
+    "#10-3-2024 - De nieuwe SQLite database bestanden dat op brightspace staan lijken schoon aangeleverd te zijn."
    ]
   },
   {
@@ -497,6 +897,37 @@
    "metadata": {},
    "source": [
     "## Data samenvoegen"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Feittabellen samenstellen"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Order_Details \n",
+    "Feit #1, #2 - Geaggregeerd feit Order_Details en Order_Header"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Order_Details_Feit = None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### "
    ]
   }
  ],
