--- a/Week 4/Practicum_4.3_Opdracht_A-Delgado.ipynb
+++ b/Week 4/Practicum_4.3_Opdracht_A-Delgado.ipynb
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -651,15 +651,15 @@
     {
      "data": {
       "text/plain": [
-       "ORDER_NUMBER             object\n",
-       "RETAILER_NAME            object\n",
-       "RETAILER_SITE_CODE       object\n",
-       "RETAILER_CONTACT_CODE    object\n",
-       "SALES_STAFF_CODE         object\n",
-       "SALES_BRANCH_CODE        object\n",
-       "ORDER_DATE               object\n",
-       "ORDER_METHOD_CODE        object\n",
-       "TRIAL885                 object\n",
+       "ORDER_NUMBER                      int32\n",
+       "RETAILER_NAME                    object\n",
+       "RETAILER_SITE_CODE                int32\n",
+       "RETAILER_CONTACT_CODE             int32\n",
+       "SALES_STAFF_CODE                  int32\n",
+       "SALES_BRANCH_CODE                 int32\n",
+       "ORDER_DATE               datetime64[ns]\n",
+       "ORDER_METHOD_CODE                 int32\n",
+       "TRIAL885                         object\n",
        "dtype: object"
       ]
      },
@@ -669,7 +669,7 @@
     {
      "data": {
       "text/plain": [
-       "ORDER_METHOD_CODE    object\n",
+       "ORDER_METHOD_CODE     int32\n",
        "ORDER_METHOD_EN      object\n",
        "TRIAL888             object\n",
        "dtype: object"
@@ -681,16 +681,16 @@
     {
      "data": {
       "text/plain": [
-       "PRODUCT_NUMBER       object\n",
-       "INTRODUCTION_DATE    object\n",
-       "PRODUCT_TYPE_CODE    object\n",
-       "PRODUCTION_COST      object\n",
-       "MARGIN               object\n",
-       "PRODUCT_IMAGE        object\n",
-       "LANGUAGE             object\n",
-       "PRODUCT_NAME         object\n",
-       "DESCRIPTION          object\n",
-       "TRIAL888             object\n",
+       "PRODUCT_NUMBER                int32\n",
+       "INTRODUCTION_DATE    datetime64[ns]\n",
+       "PRODUCT_TYPE_CODE             int32\n",
+       "PRODUCTION_COST             float64\n",
+       "MARGIN                      float64\n",
+       "PRODUCT_IMAGE                object\n",
+       "LANGUAGE                     object\n",
+       "PRODUCT_NAME                 object\n",
+       "DESCRIPTION                  object\n",
+       "TRIAL888                     object\n",
        "dtype: object"
       ]
      },
@@ -700,7 +700,7 @@
     {
      "data": {
       "text/plain": [
-       "PRODUCT_LINE_CODE    object\n",
+       "PRODUCT_LINE_CODE     int32\n",
        "PRODUCT_LINE_EN      object\n",
        "TRIAL888             object\n",
        "dtype: object"
@@ -712,8 +712,8 @@
     {
      "data": {
       "text/plain": [
-       "PRODUCT_TYPE_CODE    object\n",
-       "PRODUCT_LINE_CODE    object\n",
+       "PRODUCT_TYPE_CODE     int32\n",
+       "PRODUCT_LINE_CODE     int32\n",
        "PRODUCT_TYPE_EN      object\n",
        "TRIAL888             object\n",
        "dtype: object"
@@ -725,12 +725,12 @@
     {
      "data": {
       "text/plain": [
-       "RETURN_CODE           object\n",
-       "RETURN_DATE           object\n",
-       "ORDER_DETAIL_CODE     object\n",
-       "RETURN_REASON_CODE    object\n",
-       "RETURN_QUANTITY       object\n",
-       "TRIAL888              object\n",
+       "RETURN_CODE                    int32\n",
+       "RETURN_DATE           datetime64[ns]\n",
+       "ORDER_DETAIL_CODE              int32\n",
+       "RETURN_REASON_CODE             int32\n",
+       "RETURN_QUANTITY                int32\n",
+       "TRIAL888                      object\n",
        "dtype: object"
       ]
      },
@@ -740,7 +740,7 @@
     {
      "data": {
       "text/plain": [
-       "RETURN_REASON_CODE       object\n",
+       "RETURN_REASON_CODE        int32\n",
        "RETURN_DESCRIPTION_EN    object\n",
        "TRIAL888                 object\n",
        "dtype: object"
@@ -752,17 +752,17 @@
     {
      "data": {
       "text/plain": [
-       "SALES_STAFF_CODE     object\n",
-       "FIRST_NAME           object\n",
-       "LAST_NAME            object\n",
-       "POSITION_EN          object\n",
-       "WORK_PHONE           object\n",
-       "EXTENSION            object\n",
-       "FAX                  object\n",
-       "EMAIL                object\n",
-       "DATE_HIRED           object\n",
-       "SALES_BRANCH_CODE    object\n",
-       "TRIAL888             object\n",
+       "SALES_STAFF_CODE              int32\n",
+       "FIRST_NAME                   object\n",
+       "LAST_NAME                    object\n",
+       "POSITION_EN                  object\n",
+       "WORK_PHONE                   object\n",
+       "EXTENSION                   float64\n",
+       "FAX                          object\n",
+       "EMAIL                        object\n",
+       "DATE_HIRED           datetime64[ns]\n",
+       "SALES_BRANCH_CODE             int32\n",
+       "TRIAL888                     object\n",
        "dtype: object"
       ]
      },
@@ -772,13 +772,13 @@
     {
      "data": {
       "text/plain": [
-       "SALES_BRANCH_CODE    object\n",
+       "SALES_BRANCH_CODE     int32\n",
        "ADDRESS1             object\n",
        "ADDRESS2             object\n",
        "CITY                 object\n",
        "REGION               object\n",
        "POSTAL_ZONE          object\n",
-       "COUNTRY_CODE         object\n",
+       "COUNTRY_CODE          int32\n",
        "TRIAL888             object\n",
        "dtype: object"
       ]
@@ -789,15 +789,15 @@
     {
      "data": {
       "text/plain": [
-       "RETAILER_SITE_CODE    object\n",
-       "RETAILER_CODE         object\n",
+       "RETAILER_SITE_CODE     int32\n",
+       "RETAILER_CODE          int32\n",
        "ADDRESS1              object\n",
        "ADDRESS2              object\n",
        "CITY                  object\n",
        "REGION                object\n",
        "POSTAL_ZONE           object\n",
-       "COUNTRY_CODE          object\n",
-       "ACTIVE_INDICATOR      object\n",
+       "COUNTRY_CODE           int32\n",
+       "ACTIVE_INDICATOR       int32\n",
        "TRIAL888              object\n",
        "dtype: object"
       ]
@@ -848,13 +848,15 @@
     "product_line[\"PRODUCT_LINE_CODE\"] = product_line[\"PRODUCT_LINE_CODE\"].astype(int)\n",
     "\n",
     "product_type[\"PRODUCT_LINE_CODE\"] = product_type[\"PRODUCT_LINE_CODE\"].astype(int)\n",
-    "product_type[\"PRODUCT_TYPE_CODE\"] = product_type[\"PRODUCT_TYPE_CODE\"].astpye(int)\n",
+    "product_type[\"PRODUCT_TYPE_CODE\"] = product_type[\"PRODUCT_TYPE_CODE\"].astype(int)\n",
     "\n",
     "returned_item[\"RETURN_CODE\"] = returned_item[\"RETURN_CODE\"].astype(int)\n",
-    "returned_item[\"RETURN_DATE\"] = pd.to_datetime(returned_item[\"RETURN_DATE\"])\n",
+    "returned_item[\"RETURN_DATE\"] = pd.to_datetime(returned_item[\"RETURN_DATE\"], format=\"%d-%m-%Y %H:%M:%S\")\n",
     "returned_item[\"ORDER_DETAIL_CODE\"] = returned_item[\"ORDER_DETAIL_CODE\"].astype(int)\n",
     "returned_item[\"RETURN_REASON_CODE\"] = returned_item[\"RETURN_REASON_CODE\"].astype(int)\n",
     "returned_item[\"RETURN_QUANTITY\"] = returned_item[\"RETURN_QUANTITY\"].astype(int)\n",
+    "\n",
+    "return_reason[\"RETURN_REASON_CODE\"] = return_reason[\"RETURN_REASON_CODE\"].astype(int)\n",
     "\n",
     "sales_staff[\"SALES_STAFF_CODE\"] = sales_staff[\"SALES_STAFF_CODE\"].astype(int)\n",
     "sales_staff[\"EXTENSION\"] = sales_staff[\"EXTENSION\"].astype(float)\n",
