--- a/Week 4/Practicum_4.3_Opdracht_A-Delgado.ipynb
+++ b/Week 4/Practicum_4.3_Opdracht_A-Delgado.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,16 +36,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pyodbc.Cursor at 0x1ccab60f8b0>"
+       "<pyodbc.Cursor at 0x1ccab60c030>"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -968,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -1255,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -1518,7 +1518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1539,7 +1539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -1639,7 +1639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -1810,7 +1810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -2174,7 +2174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2202,7 +2202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -2440,12 +2440,64 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PRODUCT_NUMBER     Int64\n",
+       "YEAR               Int64\n",
+       "MONTH              Int64\n",
+       "EXPECTED_VOLUME    Int64\n",
+       "dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "global GO_SALES_PRODUCT_FORECASTData\n",
+    "GO_SALES_PRODUCT_FORECASTData = pd.read_csv(\"../Assets/Week 2/GO_SALES_PRODUCT_FORECASTData.csv\")\n",
+    "GO_SALES_PRODUCT_FORECASTData = GO_SALES_PRODUCT_FORECASTData.convert_dtypes()\n",
+    "display(GO_SALES_PRODUCT_FORECASTData.dtypes)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### GO_SALES_INVENTORY_LEVELSData\n",
     "\n",
     "Feit #7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "INVENTORY_YEAR     Int64\n",
+       "INVENTORY_MONTH    Int64\n",
+       "PRODUCT_NUMBER     Int64\n",
+       "INVENTORY_COUNT    Int64\n",
+       "dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "global GO_SALES_INVENTORY_LEVELSData\n",
+    "GO_SALES_INVENTORY_LEVELSData = pd.read_csv(\"../Assets/Week 2/GO_SALES_INVENTORY_LEVELSData.csv\")\n",
+    "GO_SALES_INVENTORY_LEVELSData = GO_SALES_INVENTORY_LEVELSData.convert_dtypes()\n",
+    "display(GO_SALES_INVENTORY_LEVELSData.dtypes)"
    ]
   },
   {
@@ -2457,7 +2509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2475,26 +2527,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 109,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INSERT INTO PRODUCT(PRODUCT_NUMBER_PK, INTRODUCTION_DATE,PRODUCT_TYPE_CODE, PRODUCT_TYPE_EN, PRODUCT_LINE_CODE,PRODUCT_LINE_EN,PRODUCTION_COST,MARGIN, PRODUCT_IMAGE,PRODUCT_NAME,PRODUCT_DESCRIPTION_EN,LANUGAGE) VALUES (13, '2011-02-15 00:00:00',2, 'Tents', 1, 'Camping Equipment' ,392.57, 0.25, 'P13CE1TN2.jpg', 'Star Gazer 2', 'The Star Gazer 2 is the Great Outdoor's most versatile tent.  It is a large two-person tent that is both durable and light weight.  Packed size: 18 x 70 cm. Weight: 2.6 kg.',  'EN' )\n",
+      "INSERT INTO PRODUCT(PRODUCT_NUMBER_PK, INTRODUCTION_DATE,PRODUCT_TYPE_CODE, PRODUCT_TYPE_EN, PRODUCT_LINE_CODE,PRODUCT_LINE_EN,PRODUCTION_COST,MARGIN, PRODUCT_IMAGE,PRODUCT_NAME,PRODUCT_DESCRIPTION_EN,LANUGAGE) VALUES (38, '2013-03-05 00:00:00',5, 'Lanterns', 1, 'Camping Equipment' ,20.0, 0.33, 'P38CE1LT5.jpg', 'EverGlow Kerosene', 'One of the most dependable sources of light in an emergency, this lantern is always ready and doesn't need to be recharged. Cotton wick. Height: 30 cm.',  'EN' )\n"
+     ]
+    }
+   ],
    "source": [
     "for index, row in PRODUCT_REGISTRY.iterrows():\n",
     "    try:\n",
-    "        query = \"INSERT INTO PRODUCT(PRODUCT_NUMBER_PK, INTRODUCTION_DATE,PRODUCT_TYPE_CODE, PRODUCT_TYPE_EN, PRODUCT_LINE_CODE,PRODUCT_LINE_EN,PRODUCTION_COST,MARGIN, PRODUCT_IMAGE,PRODUCT_NAME,PRODUCT_DESCRIPTION_EN,LANUGAGE)VALUES (1, '2011-02-15 00:00:00', 1, 'Cooking Gear', 1, 'Camping Equipment' ,4.0, 0.33, 'INSERTATTEMPT.jpg', 'TrailChef Water Bag', 'Lightweight, collapsible bag to carry liquids easily.  Wide mouth for easy filling.  Holds 10 liters.', 'EN' )\"\n",
-    "        \n",
-    "        # (\n",
-    "        #     f\"INSERT INTO PRODUCT\"\n",
-    "        #     f\"(PRODUCT_NUMBER_PK, INTRODUCTION_DATE,PRODUCT_TYPE_CODE, PRODUCT_TYPE_EN, \"\n",
-    "\t    #     f\"PRODUCT_LINE_CODE,PRODUCT_LINE_EN,PRODUCTION_COST,MARGIN, \"\n",
-    "\t    #     f\"PRODUCT_IMAGE,PRODUCT_NAME,PRODUCT_DESCRIPTION_EN,LANUGAGE) \"\n",
-    "        #     f\"VALUES \"\n",
-    "        #     f\"({row[\"PRODUCT_NUMBER\"]}, '{row[\"INTRODUCTION_DATE\"]}',\"\n",
-    "        #     f\"{row[\"PRODUCT_TYPE_CODE\"]}, '{row[\"PRODUCT_TYPE_EN\"]}', {row[\"PRODUCT_LINE_CODE\"]}, \"\n",
-    "        #     f\"'{row[\"PRODUCT_LINE_EN\"]}' ,{row[\"PRODUCTION_COST\"]}, {row[\"MARGIN\"]}, \"\n",
-    "        #     f\"'{row[\"PRODUCT_IMAGE\"]}', '{row[\"PRODUCT_NAME\"]}', '{row[\"DESCRIPTION\"]}', \"\n",
-    "        #     f\" '{row[\"LANGUAGE\"]}' )\"\n",
-    "        # )\n",
+    "        query =  (\n",
+    "            f\"INSERT INTO PRODUCT\"\n",
+    "            f\"(PRODUCT_NUMBER_PK, INTRODUCTION_DATE,PRODUCT_TYPE_CODE, PRODUCT_TYPE_EN, \"\n",
+    "\t        f\"PRODUCT_LINE_CODE,PRODUCT_LINE_EN,PRODUCTION_COST,MARGIN, \"\n",
+    "\t        f\"PRODUCT_IMAGE,PRODUCT_NAME,PRODUCT_DESCRIPTION_EN,LANUGAGE) \"\n",
+    "            f\"VALUES \"\n",
+    "            f\"({row[\"PRODUCT_NUMBER\"]}, '{row[\"INTRODUCTION_DATE\"]}',\"\n",
+    "            f\"{row[\"PRODUCT_TYPE_CODE\"]}, '{row[\"PRODUCT_TYPE_EN\"]}', {row[\"PRODUCT_LINE_CODE\"]}, \"\n",
+    "            f\"'{row[\"PRODUCT_LINE_EN\"]}' ,{row[\"PRODUCTION_COST\"]}, {row[\"MARGIN\"]}, \"\n",
+    "            f\"'{row[\"PRODUCT_IMAGE\"]}', '{row[\"PRODUCT_NAME\"]}', '{row[\"DESCRIPTION\"]}', \"\n",
+    "            f\" '{row[\"LANGUAGE\"]}' )\"\n",
+    "        )\n",
     "        export_cursor.execute(query)\n",
     "    except pyodbc.Error:\n",
     "        print(query)\n",
@@ -2549,7 +2608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
