Verder gewerkt aan Data Warehouse. Meer tabellen in SQL Server gezet. Trigger gemaakt voor Staff_Training waarmee de meest recente versie van de Foreign Surrogate Key word gekozen(versie kan niet nieuwer zijn dan de row die de FSK bevat). Markdown bestanden aangepast; plaatjes worden nu ook op Github goed weergeven.

--- a/Week 3/Practicum_3.2_Opdracht_A-Delgado.ipynb
+++ b/Week 3/Practicum_3.2_Opdracht_A-Delgado.ipynb
@@ -90,7 +90,7 @@
    "source": [
     "### Big O notation\n",
     "\n",
-    "<img src=\"Assets\\Week 3\\Big_O_Notation.png\" width=600 height=600>"
+    "![Big O Notation](../Assets/Week%203/Big_O_Notation.png)"
    ]
   },
   {
@@ -258,7 +258,7 @@
    "source": [
     "#### Binary Tree\n",
     "\n",
-    "<img src=\"Assets\\Week 3\\Binary_tree_v2.svg.png\" width=600 height=400> \n",
+    "![Binary Tree](../Assets/Week%203/Binary_tree_v2.svg.png)\n",
     "\n",
     "\n",
     "Het bovenste element van de boom is de \"root\". Elementen zonder child-nodes of die onderaan de boom staan zijn \"leafnodes\". Nodes dat boven een andere node staan zijn \"Parent nodes\", en nodes die ergens onder staan zijn \"Child nodes\" Een Binary Tree Node bestaat uit de volgende componenten : \n",
@@ -277,7 +277,7 @@
     "\n",
     "Er zijn ook verschillen tussen gebalanceerde en ongebalanceerde binary trees. In de afbeelding hierboven is elk directe child node het dichtsbijbzijnde lagere of hogere waarde; dat is een voorbeeld van een *gebalanceerde* binary tree. Hieronder is een voorbeeld van een ongebalanceerde binary tree.\n",
     "\n",
-    "<img src=\"Assets\\Week 3\\Unbalanced_Binary_Tree.jpg\" height=400 width=400>\n",
+    "![Unbalanced Binary Tree](../Assets/Week%203/Unbalanced_Binary_Tree.jpg)\n",
     "\n",
     "Zoals te zien zijn alle waardes rechts van de root wel een hogere waarde, maar directe child nodes zijn niet de dichtsbijzijnde waardes. Omdat dit ongebalanceerd is duren operaties op een dergelijke tree langer."
    ]
@@ -452,7 +452,7 @@
    "source": [
     "#### Graphs\n",
     "\n",
-    "<img src=\"Assets\\Week 3\\undirectedgraph.png\" width=600 height=300>\n",
+    "![Undirected Graph](../Assets/Week%203/undirectedgraph.png)\n",
     "\n",
     "\n",
     "Graphs zijn non-lineaire datastructuren opgebouwd uit Nodes(vertices/vertex) en Edges(lines/arcs), vaak gedefinieerd op de volgende manier: G={N,E}. De twee meest voorkomende soorten graphs zijn Directen en Undirected graphs. Het verschil tussen de twee is dat bij Directed Graphs de Edges een directie hebben dat een specifiek pad van Node A naar Node B aanduidt. In de afbeelding hierboven is een Undirected Graph afgebeeld. "
