--- a/Week 4/Practicum_4.3_Opdracht_A-Delgado.ipynb
+++ b/Week 4/Practicum_4.3_Opdracht_A-Delgado.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,16 +36,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pyodbc.Cursor at 0x1ccab60c030>"
+       "<pyodbc.Cursor at 0x26315730bb0>"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
     "database = 'GreatOutdoorsDW'\n",
     "\n",
     "DB = {\n",
-    "    'servername': laptop,\n",
+    "    'servername': desktop,\n",
     "    'database' : database\n",
     "}\n",
     "\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -511,14 +511,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\arcde\\AppData\\Local\\Temp\\ipykernel_17272\\865043711.py:12: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "C:\\Users\\Anthony Delgado\\AppData\\Local\\Temp\\ipykernel_2352\\1536311232.py:12: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  go_staff_staff[\"DATE_HIRED\"] = pd.to_datetime(go_staff_staff[\"DATE_HIRED\"])\n"
      ]
     },
@@ -603,6 +603,97 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>COURSE_CODE</th>\n",
+       "      <th>COURSE_DESCRIPTION</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>GO Orientation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>GO Communication</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>GO Sales 1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>GO Sales 2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>GO Marketing 1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>GO Marketing 2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>GO Marketing 3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>GO Management 1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>GO Management 2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   COURSE_CODE COURSE_DESCRIPTION\n",
+       "0            1     GO Orientation\n",
+       "1            2   GO Communication\n",
+       "2            3         GO Sales 1\n",
+       "3            4         GO Sales 2\n",
+       "4            5     GO Marketing 1\n",
+       "5            6     GO Marketing 2\n",
+       "6            7     GO Marketing 3\n",
+       "7            8    GO Management 1\n",
+       "8            9    GO Management 2"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -636,7 +727,8 @@
     "    # table = table.drop(\"TRIAL633\", axis=1)\n",
     "    table = table[table.columns.drop(list(table.filter(regex=\"TRIAL\")))]\n",
     "    display(table.dtypes)\n",
-    "\n"
+    "\n",
+    "display(go_staff_course)"
    ]
   },
   {
@@ -648,16 +740,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\arcde\\AppData\\Local\\Temp\\ipykernel_17272\\933722837.py:34: UserWarning: Parsing dates in %d-%m-%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
+      "C:\\Users\\Anthony Delgado\\AppData\\Local\\Temp\\ipykernel_2352\\933722837.py:34: UserWarning: Parsing dates in %d-%m-%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
       "  product[\"INTRODUCTION_DATE\"] = pd.to_datetime(product[\"INTRODUCTION_DATE\"])\n",
-      "C:\\Users\\arcde\\AppData\\Local\\Temp\\ipykernel_17272\\933722837.py:54: UserWarning: Parsing dates in %d-%m-%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
+      "C:\\Users\\Anthony Delgado\\AppData\\Local\\Temp\\ipykernel_2352\\933722837.py:54: UserWarning: Parsing dates in %d-%m-%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
       "  sales_staff[\"DATE_HIRED\"] = pd.to_datetime(sales_staff[\"DATE_HIRED\"])\n"
      ]
     },
@@ -934,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -968,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -1255,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -1518,7 +1610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1539,7 +1631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -1639,7 +1731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -1797,6 +1889,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Course\n",
+    "\n",
+    "Wordt 1 op 1 overgenomen."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Feittabellen samenstellen"
    ]
   },
@@ -1810,7 +1911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -2174,7 +2275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2202,7 +2303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -2231,9 +2332,7 @@
        "      <th>FULL_NAME</th>\n",
        "      <th>POSITION_EN</th>\n",
        "      <th>COURSE_CODE</th>\n",
-       "      <th>COURSE_DESCRIPTION</th>\n",
        "      <th>SATISFACTION_TYPE_CODE</th>\n",
-       "      <th>SATISFACTION_TYPE_DESCRIPTION</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2244,9 +2343,7 @@
        "      <td>Tuomas, Savolainen</td>\n",
        "      <td>Level 2 Sales Representative</td>\n",
        "      <td>2</td>\n",
-       "      <td>GO Communication</td>\n",
        "      <td>1</td>\n",
-       "      <td>Not satisfied</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -2255,9 +2352,7 @@
        "      <td>Tuomas, Savolainen</td>\n",
        "      <td>Level 2 Sales Representative</td>\n",
        "      <td>3</td>\n",
-       "      <td>GO Sales 1</td>\n",
        "      <td>1</td>\n",
-       "      <td>Not satisfied</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -2266,9 +2361,7 @@
        "      <td>Tuomas, Savolainen</td>\n",
        "      <td>Level 2 Sales Representative</td>\n",
        "      <td>4</td>\n",
-       "      <td>GO Sales 2</td>\n",
        "      <td>1</td>\n",
-       "      <td>Not satisfied</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -2277,9 +2370,7 @@
        "      <td>Tuomas, Savolainen</td>\n",
        "      <td>Level 2 Sales Representative</td>\n",
        "      <td>5</td>\n",
-       "      <td>GO Marketing 1</td>\n",
        "      <td>4</td>\n",
-       "      <td>Very Satisfied</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -2288,14 +2379,10 @@
        "      <td>Tuomas, Savolainen</td>\n",
        "      <td>Level 2 Sales Representative</td>\n",
        "      <td>6</td>\n",
-       "      <td>GO Marketing 2</td>\n",
        "      <td>4</td>\n",
-       "      <td>Very Satisfied</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -2310,9 +2397,7 @@
        "      <td>Eduardo, Guimarães</td>\n",
        "      <td>Level 2 Sales Representative</td>\n",
        "      <td>5</td>\n",
-       "      <td>GO Marketing 1</td>\n",
        "      <td>4</td>\n",
-       "      <td>Very Satisfied</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>395</th>\n",
@@ -2321,9 +2406,7 @@
        "      <td>Helena, Lindholm</td>\n",
        "      <td>Level 3 Sales Representative</td>\n",
        "      <td>2</td>\n",
-       "      <td>GO Communication</td>\n",
        "      <td>5</td>\n",
-       "      <td>More than satisfied</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>396</th>\n",
@@ -2332,9 +2415,7 @@
        "      <td>Helena, Lindholm</td>\n",
        "      <td>Level 3 Sales Representative</td>\n",
        "      <td>5</td>\n",
-       "      <td>GO Marketing 1</td>\n",
        "      <td>3</td>\n",
-       "      <td>Satisfied</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>397</th>\n",
@@ -2343,9 +2424,7 @@
        "      <td>Helena, Lindholm</td>\n",
        "      <td>Level 3 Sales Representative</td>\n",
        "      <td>6</td>\n",
-       "      <td>GO Marketing 2</td>\n",
        "      <td>5</td>\n",
-       "      <td>More than satisfied</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>398</th>\n",
@@ -2354,13 +2433,11 @@
        "      <td>Helena, Lindholm</td>\n",
        "      <td>Level 3 Sales Representative</td>\n",
        "      <td>7</td>\n",
-       "      <td>GO Marketing 3</td>\n",
        "      <td>5</td>\n",
-       "      <td>More than satisfied</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>399 rows × 8 columns</p>\n",
+       "<p>399 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -2377,33 +2454,20 @@
        "397  2005                99    Helena, Lindholm  Level 3 Sales Representative   \n",
        "398  2005                99    Helena, Lindholm  Level 3 Sales Representative   \n",
        "\n",
-       "     COURSE_CODE COURSE_DESCRIPTION  SATISFACTION_TYPE_CODE  \\\n",
-       "0              2   GO Communication                       1   \n",
-       "1              3         GO Sales 1                       1   \n",
-       "2              4         GO Sales 2                       1   \n",
-       "3              5     GO Marketing 1                       4   \n",
-       "4              6     GO Marketing 2                       4   \n",
-       "..           ...                ...                     ...   \n",
-       "394            5     GO Marketing 1                       4   \n",
-       "395            2   GO Communication                       5   \n",
-       "396            5     GO Marketing 1                       3   \n",
-       "397            6     GO Marketing 2                       5   \n",
-       "398            7     GO Marketing 3                       5   \n",
+       "     COURSE_CODE  SATISFACTION_TYPE_CODE  \n",
+       "0              2                       1  \n",
+       "1              3                       1  \n",
+       "2              4                       1  \n",
+       "3              5                       4  \n",
+       "4              6                       4  \n",
+       "..           ...                     ...  \n",
+       "394            5                       4  \n",
+       "395            2                       5  \n",
+       "396            5                       3  \n",
+       "397            6                       5  \n",
+       "398            7                       5  \n",
        "\n",
-       "    SATISFACTION_TYPE_DESCRIPTION  \n",
-       "0                   Not satisfied  \n",
-       "1                   Not satisfied  \n",
-       "2                   Not satisfied  \n",
-       "3                  Very Satisfied  \n",
-       "4                  Very Satisfied  \n",
-       "..                            ...  \n",
-       "394                Very Satisfied  \n",
-       "395           More than satisfied  \n",
-       "396                     Satisfied  \n",
-       "397           More than satisfied  \n",
-       "398           More than satisfied  \n",
-       "\n",
-       "[399 rows x 8 columns]"
+       "[399 rows x 6 columns]"
       ]
      },
      "metadata": {},
@@ -2415,8 +2479,7 @@
     "staff_training_combined = pd.merge(staff_training_combined, go_staff_staff, left_on=\"SALES_STAFF_CODE\", how=\"inner\", right_on=\"SALES_STAFF_CODE\")\n",
     "staff_training_combined[\"FULL_NAME\"] = staff_training_combined[[\"FIRST_NAME\", \"LAST_NAME\"]].agg( \", \".join, axis=1)\n",
     "staff_training_combined = pd.merge(staff_training_combined, go_staff_satisfaction, left_on=[\"YEAR\",\"SALES_STAFF_CODE\"], how=\"inner\", right_on=[\"YEAR\",\"SALES_STAFF_CODE\"])\n",
-    "staff_training_combined = pd.merge(staff_training_combined, go_staff_satisfaction_type, left_on=\"SATISFACTION_TYPE_CODE\", how=\"inner\", right_on=\"SATISFACTION_TYPE_CODE\")\n",
-    "staff_training_combined = staff_training_combined.loc[:,[\"YEAR\",\"SALES_STAFF_CODE\", \"FULL_NAME\",\"POSITION_EN\",\"COURSE_CODE\",\"COURSE_DESCRIPTION\",\"SATISFACTION_TYPE_CODE\",\"SATISFACTION_TYPE_DESCRIPTION\"]]\n",
+    "staff_training_combined = staff_training_combined.loc[:,[\"YEAR\",\"SALES_STAFF_CODE\", \"FULL_NAME\",\"POSITION_EN\",\"COURSE_CODE\",\"SATISFACTION_TYPE_CODE\"]]\n",
     "\n",
     "display(staff_training_combined)"
    ]
@@ -2441,7 +2504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -2476,7 +2539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -2509,7 +2572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2527,7 +2590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -2559,6 +2622,59 @@
     "        print(query)\n",
     "export_cursor.commit()\n",
     "\n",
+    "\n",
+    "for index, row in satisfaction.iterrows():\n",
+    "    try:\n",
+    "        query = (\n",
+    "            f\"INSERT INTO SATISFACTION\"\n",
+    "            f\"(YEAR, SALES_STAFF_CODE, SATISFACTION_TYPE_CODE, SATISFACTION_TYPE_DESCRIPTION)\"\n",
+    "            f\"VALUES({row[\"YEAR\"]},{row[\"SALES_STAFF_CODE\"]},\"\n",
+    "            f\"{row[\"SATISFACTION_TYPE_CODE\"]},'{row[\"SATISFACTION_TYPE_DESCRIPTION\"]}')\"\n",
+    "            )\n",
+    "        export_cursor.execute(query)\n",
+    "    except pyodbc.Error:\n",
+    "        print(query)\n",
+    "export_cursor.commit()\n",
+    "\n",
+    "for index, row in go_staff_course.iterrows():\n",
+    "    try:\n",
+    "        query = (\n",
+    "            f\"INSERT INTO COURSE(COURSE_CODE_FK, DESCRIPTION) VALUES ({row[\"COURSE_CODE\"]},'{row[\"COURSE_DESCRIPTION\"]}')\"\n",
+    "        )\n",
+    "        export_cursor.execute(query)\n",
+    "    except pyodbc.Error:\n",
+    "        print(query)\n",
+    "export_cursor.commit()\n",
+    "\n",
+    "for index, row in sales_staff_combined.iterrows():\n",
+    "    try:\n",
+    "        query = (\n",
+    "            f\"INSERT INTO STAFF_TRAINING\"\n",
+    "            f\"(YEAR_PK, SALES_STAFF_CODE_PK,FULL_NAME,POSITION_EN,COURSE_CODE_FSK,SATISFACTION_TYPE_CODE_FSK)\"\n",
+    "            f\"VALUES\"\n",
+    "            f\"({row[\"YEAR_PK\"]}, {row[\"SALES_STAFF_CODE\"]},'{row[\"FULL_NAME\"]}','{row[\"POSITION_EN\"]}',\"\n",
+    "            f\"{row[\"COURSE_CODE_FSK\"]}, {row[\"SATISFACTION_TYPE_CODE_FSK\"]})\"\n",
+    "                 )\n",
+    "        export_cursor.execute(query)\n",
+    "    except pyodbc.Error:\n",
+    "        print(query)\n",
+    "export_cursor.commit()\n",
+    "\n",
+    "# for index, row in sales_staff_combined.iterrows():\n",
+    "#     try:\n",
+    "#         query = None\n",
+    "#         export_cursor.execute(query)\n",
+    "#     except pyodbc.Error:\n",
+    "#         print(query)\n",
+    "# export_cursor.commit()\n",
+    "\n",
+    "# for index, row in sales_staff_combined.iterrows():\n",
+    "#     try:\n",
+    "#         query = None\n",
+    "#         export_cursor.execute(query)\n",
+    "#     except pyodbc.Error:\n",
+    "#         print(query)\n",
+    "# export_cursor.commit()\n",
     "\n",
     "# for index, row in sales_staff_combined.iterrows():\n",
     "#     try:\n",
@@ -2608,7 +2724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
