--- a/Week 9/Practicum_9.2_Frequent_Itemsets.ipynb
+++ b/Week 9/Practicum_9.2_Frequent_Itemsets.ipynb
@@ -11573,7 +11573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -11599,6 +11599,7 @@
        "      <th></th>\n",
        "      <th>support</th>\n",
        "      <th>itemsets</th>\n",
+       "      <th>length</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -11606,29 +11607,35 @@
        "      <th>0</th>\n",
        "      <td>0.061379</td>\n",
        "      <td>(Aloe Relief)</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0.088282</td>\n",
        "      <td>(Bear Edge)</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0.078517</td>\n",
        "      <td>(Bear Survival Edge)</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0.070745</td>\n",
        "      <td>(Blue Steel Max Putter)</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0.077322</td>\n",
        "      <td>(Blue Steel Putter)</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
@@ -11636,47 +11643,52 @@
        "      <th>202</th>\n",
        "      <td>0.022320</td>\n",
        "      <td>(Lady Hailstorm Titanium Woods Set, Hailstorm ...</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>203</th>\n",
        "      <td>0.021722</td>\n",
        "      <td>(Lady Hailstorm Titanium Irons, Lady Hailstorm...</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>204</th>\n",
        "      <td>0.023316</td>\n",
        "      <td>(Sun Blocker, Sun Shelter 30)</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>205</th>\n",
        "      <td>0.021722</td>\n",
        "      <td>(TrailChef Canteen, TrailChef Water Bag)</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>206</th>\n",
        "      <td>0.021523</td>\n",
        "      <td>(TrailChef Kettle, TrailChef Water Bag)</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>207 rows × 2 columns</p>\n",
+       "<p>207 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      support                                           itemsets\n",
-       "0    0.061379                                      (Aloe Relief)\n",
-       "1    0.088282                                        (Bear Edge)\n",
-       "2    0.078517                               (Bear Survival Edge)\n",
-       "3    0.070745                            (Blue Steel Max Putter)\n",
-       "4    0.077322                                (Blue Steel Putter)\n",
-       "..        ...                                                ...\n",
-       "202  0.022320  (Lady Hailstorm Titanium Woods Set, Hailstorm ...\n",
-       "203  0.021722  (Lady Hailstorm Titanium Irons, Lady Hailstorm...\n",
-       "204  0.023316                      (Sun Blocker, Sun Shelter 30)\n",
-       "205  0.021722           (TrailChef Canteen, TrailChef Water Bag)\n",
-       "206  0.021523            (TrailChef Kettle, TrailChef Water Bag)\n",
+       "      support                                           itemsets  length\n",
+       "0    0.061379                                      (Aloe Relief)       1\n",
+       "1    0.088282                                        (Bear Edge)       1\n",
+       "2    0.078517                               (Bear Survival Edge)       1\n",
+       "3    0.070745                            (Blue Steel Max Putter)       1\n",
+       "4    0.077322                                (Blue Steel Putter)       1\n",
+       "..        ...                                                ...     ...\n",
+       "202  0.022320  (Lady Hailstorm Titanium Woods Set, Hailstorm ...       2\n",
+       "203  0.021722  (Lady Hailstorm Titanium Irons, Lady Hailstorm...       2\n",
+       "204  0.023316                      (Sun Blocker, Sun Shelter 30)       2\n",
+       "205  0.021722           (TrailChef Canteen, TrailChef Water Bag)       2\n",
+       "206  0.021523            (TrailChef Kettle, TrailChef Water Bag)       2\n",
        "\n",
-       "[207 rows x 2 columns]"
+       "[207 rows x 3 columns]"
       ]
      },
      "metadata": {},
@@ -11692,6 +11704,7 @@
     "# display(df)\n",
     "\n",
     "frequent_dataframe = pd.DataFrame(frequent_itemsets)\n",
+    "frequent_dataframe['length'] = frequent_dataframe['itemsets'].apply(lambda x: len(x))\n",
     "\n",
     "display(frequent_dataframe)"
    ]
